2024-04-07  Yukimasa Morimi  <h20y6m@yahoo.co.jp>

	* pdfximage.c: fix an issue where the PDF becomes large when
	inserting the same image multiple times.
	https://github.com/texjporg/tex-jp-build/pull/169
	* configure.ac: version 20240407.

2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2024-03-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* configure.ac: version 20240305.

2024-03-05  Max Chernoff  <mseven@telus.net>

	* pdfximage.c (pdf_ximage_load_image): check that strcmp args
	are not non-null. Report from Hartmut Henkel,
	https://tug.org/pipermail/tex-live/2024-March/050136.html

2024-02-25  Max Chernoff  <mseven@telus.net>
 
 	* spc_util.{c,h}: Add "named" keyword to "pdf:image" special
 	* pdfdoc.{c,h}: Allow selecting a page by named destination
 	* {epdf,pdfximage,spc_pdfm,xbb}.{c,h}: Refactor to support above.
 
2024-02-10  Yukimasa Morimi  <h20y6m@yahoo.co.jp>

	* cidtype2.c, sfnt.h, tt_cmap.{c,h}:
	Look up the TrueType cmap format 14 subtable when mapping CID to
	Unicode Variation Sequence in new Adobe-Japan1-UCS2 CMap.
	https://github.com/texjporg/tex-jp-build/issues/155

2024-02-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* cidtype2.c: Fix an issue on glyph conversion of
	characters over BMP.
	Add conversion between "FULLWIDTH YEN SIGN" and "YEN SIGN".
	https://github.com/texjporg/tex-jp-build/issues/165
	* configure.ac: version 20240210.

2024-02-05  Karl Berry  <karl@freefriends.org>

	* configure.ac,
	* xbb.c (show_version),
	* dvipdfmx.c (show_version): copyright 2024, version 20240205.

2023-11-24  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>
	* dpxutil.c: Calculate time zone offset in the same way as
	in pdftex.
	* configure.ac: version 20231124.

2023-11-18  Yukimasa Morimi  <h20y6m@yahoo.co.jp>

	* cidtype2.c, unicode.c: Support for new Adobe-Japan1-UCS2 CMap.
	Ignore variation selectors, when mapping from CID to Unicode.
	Converts CJK Unified Ideographs with variant selectors to
	CJK Compatibility Ideographs, if possible.